.azuredevops/aks/manifest/service-clusterip-httproute.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service
kind: Service
apiVersion: v1
metadata:
  name: #{aksappname}#
  labels:
   app.kubernetes.io/name: #{aksappname}#  
   app.kubernetes.io/version: "#{Build.BuildId}#"
   app.kubernetes.io/managed-by: yaml    
   app.kubernetes.io/component: appsection-#{appsectionname}#
   app.kubernetes.io/part-of: part-#{apppartname}#
spec:
  selector:
    app: #{aksappname}#
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 443
    targetPort: 8081
    name: https
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: #{aksappname}#-https
spec:
  parentRefs:
    - kind: Gateway
      name: everyeng-gateway      
      sectionName: #{aksappname}#-https-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: #{aksappname}#
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: #{aksappname}#-http
spec:
  parentRefs:
    - kind: Gateway
      name: everyeng-gateway      
      sectionName: #{aksappname}#-http-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: #{aksappname}#
          port: 80
---
